database seeding and modl updates.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
+    "dbclear": "pnpm exec prisma db execute --file prisma/seed/cleardb.sql",
+    "dbseed": "prisma db push && tsc --target 'es6' --moduleResolution 'node' --outDir 'prisma/seed/build/' prisma/seed/seed.ts && node prisma/seed/build/seed.js",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -19,6 +21,14 @@
     "@prisma/client": "^4.8.1",
     "@sveltejs/adapter-auto": "^1.0.0",
     "@sveltejs/kit": "^1.0.0",
+    "@theatre/core": "^0.5.1",
+    "@theatre/studio": "^0.5.1",
+    "@threlte/core": "^5.0.8",
+    "@threlte/extras": "^4.9.3",
+    "@threlte/preprocess": "^0.0.2",
+    "@threlte/theatre": "^0.0.2",
+    "@types/node": "^18.11.18",
+    "@types/three": "^0.148.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
@@ -32,7 +42,9 @@
     "prisma": "^4.8.1",
     "svelte": "^3.54.0",
     "svelte-check": "^2.9.2",
+    "svelte-sequential-preprocessor": "^0.0.7",
     "tailwindcss": "^3.2.4",
+    "three": "^0.148.0",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
