--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "lucia-auth": "^0.4.3",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.2",
     "prettier-plugin-svelte": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.8.1",
     "svelte": "^3.54.0",
     "svelte-check": "^2.9.2",
