--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "lamina": "^1.1.23",
     "lucia-auth": "^0.4.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.2",
